--- a/BlazingDewey/Client/wwwroot/index.html
+++ b/BlazingDewey/Client/wwwroot/index.html
@@ -18,7 +18,9 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
@@ -30,3 +32,9 @@
 </body>
 
 </html>
+<style>
+    #app {
+        background: linear-gradient(0.25turn, #808080, #808080, #eaeaea, #ffffff);
+        min-height: 100vh;
+    }
+</style>
